--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnacanvas/code",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Draw nucleic acid structures in a code-centric manner",
   "repository": {
     "type": "git",
@@ -20,6 +20,7 @@
     "@rnacanvas/app-object": "^3.0.0",
     "@rnacanvas/base-pairs": "^2.2.0",
     "@rnacanvas/bases-layout": "^2.1.1",
-    "@rnacanvas/boxes": "^2.2.0"
+    "@rnacanvas/boxes": "^2.2.0",
+    "@rnacanvas/utilities": "^1.3.0"
   }
 }
