--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnacanvas/code",
-  "version": "1.6.2",
+  "version": "1.7.0",
   "description": "Draw nucleic acid structures in a code-centric manner",
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
     "@rnacanvas/base-pairs": "^2.2.0",
     "@rnacanvas/bases-layout": "^2.1.1",
     "@rnacanvas/boxes": "^2.2.0",
+    "@rnacanvas/forms": "^1.2.0",
+    "@rnacanvas/forms.bases-layout": "^3.1.0",
     "@rnacanvas/utilities": "^1.3.0"
   }
 }
