--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnacanvas/code",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "Draw nucleic acid structures with code",
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@rnacanvas/app-object": "7.0",
+    "@rnacanvas/app-object": "^7.1.0",
     "@rnacanvas/base-pairs": "^2.2.0",
     "@rnacanvas/bases-layout": "^3.0.0",
     "@rnacanvas/boxes": "^2.2.0",
