--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rnacanvas/code",
-  "version": "9.1.2",
+  "version": "9.1.3",
   "description": "Flexible nucleic acid structure drawing",
   "repository": {
     "type": "git",
@@ -13,6 +13,8 @@
   "author": "pzhaojohnson",
   "license": "MIT",
   "devDependencies": {
+    "ts-loader": "^9.5.2",
+    "typescript": "^5.7.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^6.0.1"
   },
